GNOME Bugzilla – Bug 704081
Fails to build against eog trunk (refactored eog-job-queue)
Last modified: 2019-02-22 03:17:16 UTC
As eog-job-queue was refactored to become eog-job-scheduler, eog-plugins fails to build against trunk now (at least the exif-display plugin).
Created attachment 248998 [details] [review] Build against and require eog 3.9.1
Looks good. The other plugins don't use the job system and thus shouldn't be affected. commit 857a1f2a1a14b70a6e3650665346030094ea866e Author: Dominique Leuenberger <> Date: Fri Jul 12 13:21:25 2013 +0200 Fix build with eog 3.9.1 eog-job-queue was refactored to be eog-job-scheduler https://bugzilla.gnome.org/show_bug.cgi?id=704081 --- This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.