Fix build with eog 3.9.1

eog-job-queue was refactored to be eog-job-scheduler

https://bugzilla.gnome.org/show_bug.cgi?id=704081